# jadwal-sholat

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SETUP_AND_USAGE.md  TECHNICAL.md
examples/: library_usage.py
jadwal/: __init__.py  api.py  cli.py  core.py  geocoding.py
tests/: test_api.py  test_core.py  test_geocoding.py
